# form-generator

./: pyproject.toml
form_generator/: app.py  config.py  containers.py
form_generator/application/user/: controller.py
form_generator/infrastructure/database/: database.py
form_generator/models/: form.py  user.py
form_generator/repositories/: base_repository.py  form_repository.py  user_repository.py
